--- a/INSTALL
+++ b/INSTALL
@@ -4,6 +4,9 @@ gem install --include-dependencies mod_spox
 
 Requirements include:
     * sequel
+        * database driver
+    * Ruby >= 1.8.4
+    
+Optional:
     * fastthread
     * termios
-    * Ruby >= 1.8.4
