Removed lazy loading. Modules now require needed files on their own.

--- a/INSTALL
+++ b/INSTALL
@@ -10,3 +10,6 @@ Requirements include:
 Optional:
     * fastthread
     * termios
+    
+More detailed information can be found at:
+http://dev.modspox.com/cgi-bin/trac.cgi/wiki/InstallHowto
