--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.1.0.1 Release (Bug fix)
+    * Fix made to work with sequel 2.2
+    
 0.1.0 Release (Beta status)
     Core:
     * Plugins use symlinks
