--- a/README
+++ b/README
@@ -46,7 +46,7 @@
 
 == Extending ==
 
-    Plugins HOWTO: http://dev.modspox.com/cgi-bin/trac.cgi/wiki/PluginHowto
+    Plugins HOWTO: http://dev.modspox.com/trac/mod_spox/wiki/PluginHowto
 
 == License ==
 
